--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
+    "react-use": "^17.4.0",
     "sort-by": "^1.2.0",
     "vite-plugin-svgr": "^2.2.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
