including recoil state manager + login error minor treatment

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-use": "^17.4.0",
+    "recoil": "^0.7.6",
     "sort-by": "^1.2.0",
     "vite-plugin-svgr": "^2.2.1",
     "yup": "^0.32.11"
